[package]
name = "health-tracker"
version = "0.1.0"
authors = ["gasiortomasz <gasior.tt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "healt_tracker"
path = "main.rs"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
actix = "0.10"
actix-rt = "1.1"
futures = "0.3"
tokio = "0.2"
tokio-util = { version = "0.3", features = ["codec", "udp"] }
bytes = "0.5"
uuid = { version = "0.8", features = ["v4", "serde"] }
